--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,1 @@
-ski_slope_plugin/__pycache__/__init__.cpython-312.pyc
-ski_slope_plugin/__pycache__/resources.cpython-312.pyc
-ski_slope_plugin/__pycache__/script_komplet.cpython-312.pyc
-ski_slope_plugin/__pycache__/Ski_Slope_Plugin.cpython-312.pyc
-ski_slope_plugin/__pycache__/Ski_Slope_Plugin_dockwidget.cpython-312.pyc
+ski_slope_plugin/__pycache__/
